# clogger_lib

./: .gitignore  CMakeLists.txt  cpp_build.sh  logger.hpp
include/: clogger-standard.hpp  clogger.hpp  logger-standard.hpp
include/clogger/: clogger-standard.hpp  clogger.hpp  var_string.hpp
source/: clogger-standard.cpp  clogger.cpp  logger-standard.cpp  logger-supply.hpp  logger.cpp  var_string.cpp
